# wall-shear-stress

./: README.md  boundingbox.m  boundingbox2.m  boundingboxtemp.m  computeframe.m  extensions.m  mesh_processing.ipynb  wall_shear_stress.cpp
anulus_extensions/: boundingbox2.m  extensions.m
deformation/: CMakeLists.txt
deformation/source/: main.cpp
mat_lab_prototypes_for_wall_shear_stress/: computeshearstress.m
matlab_prototypes/: shearstress.m
